# roq-binance-futures

./: CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore
conda/: meta.yaml
docker/: Dockerfile  README.md
share/: config.toml
share/flags/prod/: flags-coin-m.cfg  flags-dapi.cfg  flags-fapi.cfg
share/flags/test/: flags-dapi.cfg  flags-fapi.cfg
src/roq/: CMakeLists.txt
src/roq/binance_futures/: .gitignore  CMakeLists.txt  README.md  account.cpp  account.hpp  api.cpp  api.h  api.hpp  application.cpp  application.h  application.hpp  authenticator.cpp  authenticator.hpp  coin-m.sh  config.cpp  config.h  config.hpp  depdiko.sh  depth_buffer.cpp  depth_buffer.h  drop_copy.cpp  drop_copy.h  drop_copy.hpp  drop_copy_classic.cpp  drop_copy_classic.hpp  drop_copy_portfolio.cpp  drop_copy_portfolio.hpp  drop_copy_portfolio_state.hpp  drop_copy_portfolio_state.json  drop_copy_simple.cpp  drop_copy_simple.hpp  drop_copy_state.hpp  drop_copy_state.json  flags.cpp  flags.h  flags.hpp  gateway.cpp  gateway.h  gateway.hpp  index.rst  (+45 more)
src/roq/binance_futures/bridge/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  fix_log.cpp  fix_log.hpp  live-dapi.sh  main.cpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  settings.hpp  shared.cpp  shared.hpp  user.hpp
src/roq/binance_futures/bridge/flags/: .gitignore  CMakeLists.txt  fix.json  messaging.json  oms.json  settings.cpp  settings.hpp  test.json
src/roq/binance_futures/bridge/tools/: CMakeLists.txt  crypto.cpp  crypto.hpp  fix_log.cpp  fix_log.hpp  mapping.cpp  mapping.hpp
src/roq/binance_futures/config/: binance-futures-testnet.toml  binance-futures.toml  depdiko.toml  rencap.toml
src/roq/binance_futures/fix_bridge/: .gitignore  CMakeLists.txt  TODO  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  live-dapi.sh  live-fapi.sh  main.cpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  user.hpp
src/roq/binance_futures/fix_bridge/flags/: .gitignore  CMakeLists.txt  fix_bridge.json  settings.cpp  settings.hpp
src/roq/binance_futures/fix_bridge/tools/: CMakeLists.txt  crypto.cpp  crypto.hpp  fix_log.cpp  fix_log.hpp  mapping.cpp  mapping.hpp
src/roq/binance_futures/flags/: .gitignore  CMakeLists.txt  common.json  download.json  flags.json  mbp.json  misc.json  request.json  rest.json  settings.cpp  settings.hpp  ws.json  ws_api.json
src/roq/binance_futures/gateway/: CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.hpp  drop_copy_classic.cpp  drop_copy_classic.hpp  drop_copy_portfolio.cpp  drop_copy_portfolio.hpp  market_data.cpp  market_data.hpp  market_data_2.cpp  market_data_2.hpp  order_entry.hpp  order_entry_classic.cpp  order_entry_classic.hpp  order_entry_portfolio.cpp  order_entry_portfolio.hpp  request.hpp  rest.cpp  rest.hpp  rest_trade.cpp  rest_trade.hpp  settings.hpp  shared.cpp  shared.hpp  utils.hpp  web_socket.cpp  web_socket.hpp
src/roq/binance_futures/json/: .gitignore  CMakeLists.txt  account.json  account_config_update.json  account_config_update_data1.json  account_config_update_data2.json  account_update.json  account_update_data.json  account_update_data_balance.json  account_update_data_position.json  agg_trade.json  asset.json  auto_cancel_all_open_orders.json  balance.json  balance_item.json  balances_item.json  book_ticker.json  cancel_all_open_orders.json  cancel_order.json  contract_type.json  depth.json  depth_item.json  depth_update.json  encoder.cpp  encoder.hpp  error.json  event_reason.json  event_type.json  exchange_info.json  exchange_info_asset.json  execution_report.json  execution_report_2.json  execution_type.json  field.json  fill.json  filter.json  filter_type.json  filters.json  grid_update.json  grid_update_data.json  (+67 more)
src/roq/binance_futures/protocol/json/: .gitignore  CMakeLists.txt  account_balance_ack.json  account_balance_ack_item.json  account_config_update.json  account_config_update_data1.json  account_config_update_data2.json  account_status_ack.json  account_update.json  account_update_data.json  account_update_data_balance.json  account_update_data_position.json  agg_trade.json  asset.json  balance_update.json  balances_item.json  book_ticker.json  encoder.cpp  (+94 more)
src/roq/binance_futures/test/: CMakeLists.txt  json_account.cpp  json_account_config_update.cpp  json_account_update.cpp  json_account_update_papi.cpp  json_auto_cancel_all_open_orders.cpp  json_balance.cpp  json_book_ticker.cpp  json_cancel_order.cpp  json_depth.cpp  json_depth_update.cpp  json_error.cpp  json_exchange_info.cpp  json_filters.cpp  json_grid_update.cpp  json_listen_key.cpp  json_margin_call.cpp  json_mini_ticker.cpp  json_new_order.cpp  json_open_orders.cpp  json_order_trade_update.cpp  json_order_trade_update_papi.cpp  json_strategy_update.cpp  json_trades.cpp
src/roq/binance_futures/tools/: CMakeLists.txt  crypto.cpp  crypto.hpp  hasher.cpp  hasher.h  hasher.hpp
test/: .gitignore  CMakeLists.txt  MISSING  json_account.cpp  json_account_balance_ack.cpp  json_account_config_update.cpp  json_account_status_ack.cpp  json_account_update.cpp  json_account_update_papi.cpp  json_agg_trade.cpp  json_auto_cancel_all_open_orders.cpp  json_balance.cpp  json_balance_update.cpp  json_book_ticker.cpp  json_cancel_order.cpp  json_countdown_cancel_all_ack.cpp  json_depth.cpp  json_depth_ack.cpp  json_depth_update.cpp  json_encoder.cpp  json_error.cpp  json_exchange_info.cpp  json_exchange_info_ack.cpp  json_execution_report.cpp  json_filters.cpp  json_grid_update.cpp  json_liability_change.cpp  json_listen_key.cpp  json_listen_key_ack.cpp  json_margin_call.cpp  json_mark_price_update.cpp  json_mini_ticker.cpp  json_new_order.cpp  json_open_orders.cpp  json_open_orders_ack.cpp  json_order_cancel_ack.cpp  json_order_place_ack.cpp  json_order_trade_update.cpp  json_order_trade_update_papi.cpp  json_outbound_account_position.cpp  (+19 more)
